crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__shell_lines_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> which tests are failing?                                                                                              "
"                                                                                                                        "
"$ git status --short                                                                                                    "
"  ⎿   M src/lib.rs                                                                                                      "
"                                                                                                                        "
"$ cargo test -p bingo-core 2>&1 | tail -20                                                                              "
"  ⎿  test session::case_1 ... ok                                                                                        "
"     test session::case_2 ... ok                                                                                        "
"     test session::case_3 ... ok                                                                                        "
"     test session::case_4 ... ok                                                                                        "
"     test session::case_5 ... ok                                                                                        "
"     … +7 lines (ctrl+o to expand)                                                                                      "
"                                                                                                                        "
"$ cargo fmt --check                                                                                                     "
"  ⎿  Diff in src/lib.rs at line 12:                                                                                     "
"     -fn a(){}                                                                                                          "
"     +fn a() {}                                                                                                         "
"     [exit 1]                                                                                                           "
"                                                                                                                        "
"⏺ The formatter wants one space.                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
