crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__shell_lines_ascii.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "in_look(ascii(), || draw_tree(80, 24, tree, ui, now))"
---
"$ git status --short                                                            "
"  -   M src/lib.rs                                                              "
"                                                                                "
"$ cargo test -p bingo-core 2>&1 | tail -20                                      "
"  -  test session::case_1 ... ok                                                "
"     test session::case_2 ... ok                                                "
"     test session::case_3 ... ok                                                "
"     test session::case_4 ... ok                                                "
"     test session::case_5 ... ok                                                "
"     ... +7 lines (ctrl+o to expand)                                            "
"                                                                                "
"$ cargo fmt --check                                                             "
"  -  Diff in src/lib.rs at line 12:                                             "
"     -fn a(){}                                                                  "
"     +fn a() {}                                                                 "
"     [exit 1]                                                                   "
"                                                                                "
"* The formatter wants one space.                                                "
"                                                                                "
"                                                                                "
"+------------------------------------------------------------------------------+"
"| > ask anything · / for commands · ! for shell                                |"
"+------------------------------------------------------------------------------+"
"? for shortcuts                                                      fake/fake-1"
