crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__shell_ran_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 53
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> run the tests in the background                                                                                       "
"                                                                                                                        "
"⏺ Bash(cargo test --workspace)                                                                                          "
"  ⎿  Ran in the background                                                                                              "
"                                                                                                                        "
"⏺ Started.                                                                                                              "
"                                                                                                                        "
"⏺ Background job job_ab12cd34 (`cargo test --workspace`) exited with code 0 after 45s.                                  "
"  ⎿  `BashOutput` with id "job_ab12cd34" reads what it wrote.                                                           "
"                                                                                                                        "
"⏺ The tests passed.                                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
