crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__shell_running_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
assertion_line: 52
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> run the tests in the background                                               "
"                                                                                "
"⏺ Bash(cargo test --workspace)                                                  "
"  ⎿  Running in the background                                                  "
"                                                                                "
"⏺ Started.                                                                      "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"1 shell                                                              fake/fake-1"
